argocd/snutt-ev/snutt-ev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snutt-ev
  labels:
    app: snutt-ev
spec:
  # replicas: HPA
  selector:
    matchLabels:
      app: snutt-ev
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 4
  template:
    metadata:
      labels:
        app: snutt-ev
    spec:
      serviceAccountName: snutt-ev
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - image: yny.ocir.io/ax1dvc8vmenm/snutt-prod/snutt-ev:22
          name: snutt-ev
          resources:
            requests:
              cpu: 150m
              memory: 384Mi
            limits:
              memory: 512Mi
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health-check
              port: 8080
          readinessProbe:
            httpGet:
              path: /health-check
              port: 8080
            timeoutSeconds: 3
            failureThreshold: 5
          startupProbe:
            httpGet:
              path: /health-check
              port: 8080
            failureThreshold: 20
---
apiVersion: v1
kind: Service
metadata:
  name: snutt-ev
spec:
  type: ClusterIP
  selector:
    app: snutt-ev
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: snutt-ev
spec:
  gateways:
    - istio-ingress/waffle-ingressgateway
    - mesh
  hosts:
    - snutt-ev-api.wafflestudio.com
  http:
    - timeout: 10s
      match:
        - uri:
            prefix: /swagger-ui
        - uri:
            prefix: /v3/api-docs
      route:
        - destination:
            host: snutt-ev
